feat: :sparkles: Mostar los poquemones en pantalla por default

--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
 </head>
 <body>
     <input  id="myPikachu" value="Pikachu" type="submit"> 
-    <button id="loadPokemon">Cargar Pokémones</button>
-
+    <!-- <button id="loadPokemon">Cargar Pokémones</button> -->
+    
     <div id="pokemonList">
-
-    </div>
-
+    </div>    
 </body>
 </html> 
